--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Sistema de Inventario Sencillo</title>
+    <title>Sistema de Inventario Paiz</title>
     <script src="https://cdn.jsdelivr.net/npm/sql.js@1.8.0/dist/sql-wasm.js"></script>
     <style>
         * {
@@ -880,4 +880,5 @@
         });
     </script>
 </body>
+
 </html>
