--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
 <body>
     <div class="container">
         <header>
-            <h1>🏪 Sistema de Inventario Sencillo</h1>
+            <h1>🏪 maxidespensa de Mexico</h1>
             <p>Gestión de productos usando SQLite en el navegador</p>
         </header>
 
@@ -882,3 +882,4 @@
 </body>
 
 </html>
+
